force-app/main/default/objects/Product__c/fields/a4a_Flagged_Item__c.field-meta.xml
<CustomField>
    <fullName>a4a_Flagged_Item__c</fullName>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Flagged Item</label>
    <type>Checkbox</type>
</CustomField>