force-app/main/default/objects/Product__c/fields/Automotive_Product__c.field-meta.xml
<CustomField>
    <fullName>Automotive_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Forecast for automotive products made based on type no</inlineHelpText>
    <label>Automotive Product</label>
    <type>Checkbox</type>
</CustomField>