force-app/main/default/objects/Product__c/fields/Cellular_Technology__c.field-meta.xml
<CustomField>
    <fullName>Cellular_Technology__c</fullName>
    <label>Cellular Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPRS</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>HSDPA</fullName>
            </value>
            <value>
                <fullName>HSUPA</fullName>
            </value>
            <value>
                <fullName>HSPA+</fullName>
            </value>
            <value>
                <fullName>CDMA 1xRTT</fullName>
            </value>
            <value>
                <fullName>CDMA EV-DO</fullName>
            </value>
            <value>
                <fullName>LTE-only</fullName>
            </value>
            <value>
                <fullName>LTE-multi</fullName>
            </value>
            <value>
                <fullName>CIoT</fullName>
            </value>
            <value>
                <fullName>RPMA</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>