force-app/main/default/objects/Product__c/fields/COGS_2__c.field-meta.xml
<CustomField>
    <fullName>COGS_2__c</fullName>
    <inlineHelpText>Cost for next quarter</inlineHelpText>
    <label>COGS 2</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>