force-app/main/default/objects/Product__c/fields/COGS_3__c.field-meta.xml
<CustomField>
    <fullName>COGS_3__c</fullName>
    <inlineHelpText>Cost of product in 2 quarters</inlineHelpText>
    <label>COGS 3</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>