force-app/main/default/objects/Product__c/fields/COGS_Pct__c.field-meta.xml
<CustomField>
    <fullName>COGS_Pct__c</fullName>
    <label>COGS Pct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>