force-app/main/default/objects/Product__c/fields/COGS_Pct_in_EUR__c.field-meta.xml
<CustomField>
    <fullName>COGS_Pct_in_EUR__c</fullName>
    <label>COGS Pct in EUR</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>