force-app/main/default/objects/Product__c/fields/Comment_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Updated_Date__c</fullName>
    <label>Comment Updated Date</label>
    <type>DateTime</type>
</CustomField>