force-app/main/default/objects/Product__c/fields/Edit_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Edit_Not_Allowed__c</fullName>
    <description>Flag to be used to indicate the current user is not allowed to edit the Product record (although the record may be editable)</description>
    <formula>OR(
$User.ProfileId = &quot;00e20000000xD8Q&quot;, /* R&amp;D */
$User.ProfileId = &quot;00e20000000zSSg&quot;, /* FAE */
$User.ProfileId = &quot;00e200000015FVB&quot; /* Technical Manager */
)</formula>
    <inlineHelpText>Flag to be used to indicate the current user is not allowed to edit the Product record (although the record may be editable)</inlineHelpText>
    <label>Edit Not Allowed</label>
    <type>Checkbox</type>
</CustomField>