force-app/main/default/objects/Product__c/fields/End_of_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>End_of_Support_Date__c</fullName>
    <label>End of Support Date</label>
    <type>Date</type>
</CustomField>