force-app/main/default/objects/Product__c/fields/EOL_PCN_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>EOL_PCN_Issue_Date__c</fullName>
    <description>Date of notification for EOL or PCN (change of the type number)</description>
    <inlineHelpText>Date of notification for EOL or PCN (change of the type number)</inlineHelpText>
    <label>EOL/PCN Issue Date</label>
    <type>Date</type>
</CustomField>