force-app/main/default/objects/Product__c/fields/ExtID__c.field-meta.xml
<CustomField>
    <fullName>ExtID__c</fullName>
    <externalId>true</externalId>
    <label>ExtID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>