force-app/main/default/objects/Product__c/fields/Flash_FW__c.field-meta.xml
<CustomField>
    <fullName>Flash_FW__c</fullName>
    <inlineHelpText>Flash firmware of the module</inlineHelpText>
    <label>Flash FW</label>
    <length>100</length>
    <type>Text</type>
</CustomField>