force-app/main/default/objects/Product__c/fields/IP_Availability_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Availability_Date__c</fullName>
    <description>Date when parts planned to be shipped from u-blox supplier (e.g. Flextronics)</description>
    <inlineHelpText>Date when parts planned to be shipped from u-blox supplier (e.g. Flextronics)</inlineHelpText>
    <label>IP Availability Date</label>
    <type>Date</type>
</CustomField>