force-app/main/default/objects/Product__c/fields/IPR_Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>IPR_Checked_Date__c</fullName>
    <description>Date when IPR Checked has been checked (automatically updated).</description>
    <inlineHelpText>Date when IPR Checked has been checked (automatically updated).</inlineHelpText>
    <label>IPR Checked Date</label>
    <type>Date</type>
</CustomField>