force-app/main/default/objects/Product__c/fields/IPR_Class__c.field-meta.xml
<CustomField>
    <fullName>IPR_Class__c</fullName>
    <formula>If ( IPR__c  &lt; 20, &quot;&quot;,
if (IPR__c &lt; 30, &quot;2G&quot;,
if (IPR__c &lt; 40, &quot;3G&quot;,
&quot;4G&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IPR Class, from Abacus</inlineHelpText>
    <label>IPR Class</label>
    <type>Text</type>
</CustomField>