force-app/main/default/objects/Product__c/fields/IPR_Cost__c.field-meta.xml
<CustomField>
    <fullName>IPR_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPR Cost</label>
    <referenceTo>IPR_Cost__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>