force-app/main/default/objects/Product__c/fields/IPR_Pct_Ext_Modem__c.field-meta.xml
<CustomField>
    <fullName>IPR_Pct_Ext_Modem__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IPR Pct Ext Modem</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>