force-app/main/default/objects/Product__c/fields/IPR_Pct_Telematics__c.field-meta.xml
<CustomField>
    <fullName>IPR_Pct_Telematics__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Value copied from IPR Cost</inlineHelpText>
    <label>IPR Pct Telematics</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>