force-app/main/default/objects/Product__c/fields/IPR_Technology__c.field-meta.xml
<CustomField>
    <fullName>IPR_Technology__c</fullName>
    <inlineHelpText>Technology related to Cellular Technology</inlineHelpText>
    <label>IPR Technology</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cellular_Technology__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>EV-DO</fullName>
            </value>
            <value>
                <fullName>1xRTT</fullName>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>Rel 5/6</fullName>
            </value>
            <value>
                <fullName>Rel 7+</fullName>
            </value>
            <value>
                <fullName>Rel 9&amp;10 single</fullName>
            </value>
            <value>
                <fullName>Rel 9&amp;10 multi</fullName>
            </value>
            <value>
                <fullName>Cat 1 single-mode</fullName>
            </value>
            <value>
                <fullName>Cat 1 multi-mode</fullName>
            </value>
            <value>
                <fullName>Cat 1 multi-mode NO 3G</fullName>
            </value>
            <value>
                <fullName>Cat 3 single-mode</fullName>
            </value>
            <value>
                <fullName>Cat 3 multi-mode</fullName>
            </value>
            <value>
                <fullName>Cat 4 single-mode</fullName>
            </value>
            <value>
                <fullName>Cat 4 multi-mode</fullName>
            </value>
            <value>
                <fullName>Cat 6 single-mode</fullName>
            </value>
            <value>
                <fullName>Cat 6 multi-mode</fullName>
            </value>
            <value>
                <fullName>Cat M single-mode</fullName>
            </value>
            <value>
                <fullName>Cat M multi-mode</fullName>
            </value>
            <value>
                <fullName>Cat M multi-mode NO 3G</fullName>
            </value>
            <value>
                <fullName>NB-IoT</fullName>
            </value>
            <value>
                <fullName>NB-IoT CN</fullName>
            </value>
            <value>
                <fullName>RPMA</fullName>
            </value>
            <value>
                <fullName>not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>