force-app/main/default/objects/Product__c/fields/IPR_Technology_Changed__c.field-meta.xml
<CustomField>
    <fullName>IPR_Technology_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag when IPR Technology picklist changed to update IPR cost fields (trigger the workflow)</description>
    <inlineHelpText>Flag when IPR Technology picklist changed to update IPR cost fields (trigger the workflow)</inlineHelpText>
    <label>IPR Technology Changed</label>
    <type>Checkbox</type>
</CustomField>