force-app/main/default/objects/Product__c/fields/IPR_USD_Consumer__c.field-meta.xml
<CustomField>
    <fullName>IPR_USD_Consumer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IPR USD Consumer</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>