force-app/main/default/objects/Product__c/fields/IPR_USD_M2M__c.field-meta.xml
<CustomField>
    <fullName>IPR_USD_M2M__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Value copied from IPR Cost</inlineHelpText>
    <label>IPR USD M2M</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>