force-app/main/default/objects/Product__c/fields/Last_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Shipment_Date__c</fullName>
    <inlineHelpText>Last shipment date for EOL product.</inlineHelpText>
    <label>Last Shipment Date</label>
    <type>Date</type>
</CustomField>