force-app/main/default/objects/Product__c/fields/Last_Time_Buy_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Buy_Date__c</fullName>
    <inlineHelpText>Last Time Buy Date for EOL product</inlineHelpText>
    <label>Last Time Buy Date</label>
    <type>Date</type>
</CustomField>