force-app/main/default/objects/Product__c/fields/Linked_to_Abacus__c.field-meta.xml
<CustomField>
    <fullName>Linked_to_Abacus__c</fullName>
    <formula>IF( From_Abacus__c = true , IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 20),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked to Abacus</label>
    <type>Text</type>
</CustomField>