force-app/main/default/objects/Product__c/fields/Logistics_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Overhead__c</fullName>
    <inlineHelpText>Overhead added to the Abacus cost for the calculation of the contribution.</inlineHelpText>
    <label>Logistics Overhead</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>