force-app/main/default/objects/Product__c/fields/New_Type_Number_Available_c__c.field-meta.xml
<CustomField>
    <fullName>New_Type_Number_Available_c__c</fullName>
    <description>Made to exclude Products from the list for sanity check (with EOL/PCN Issue Date and Status MP)</description>
    <formula>Name = Successor_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Type Number Available</label>
    <type>Checkbox</type>
</CustomField>