force-app/main/default/objects/Product__c/fields/Positioning_Engine__c.field-meta.xml
<CustomField>
    <fullName>Positioning_Engine__c</fullName>
    <label>Positioning Engine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>u-blox A9</fullName>
            </value>
            <value>
                <fullName>u-blox D9</fullName>
            </value>
            <value>
                <fullName>u-blox F9</fullName>
            </value>
            <value>
                <fullName>u-blox M9</fullName>
            </value>
            <value>
                <fullName>u-blox M8</fullName>
            </value>
            <value>
                <fullName>u-blox 8</fullName>
            </value>
            <value>
                <fullName>u-blox 7</fullName>
            </value>
            <value>
                <fullName>u-blox 6</fullName>
            </value>
            <value>
                <fullName>u-blox 5</fullName>
            </value>
            <value>
                <fullName>ANTARIS 4</fullName>
            </value>
            <value>
                <fullName>SiRF3</fullName>
            </value>
            <value>
                <fullName>SiRF4</fullName>
            </value>
            <value>
                <fullName>MTK3318</fullName>
            </value>
            <value>
                <fullName>MTK3329</fullName>
            </value>
            <value>
                <fullName>MTK3333</fullName>
            </value>
            <value>
                <fullName>MTK3339</fullName>
            </value>
            <value>
                <fullName>ST Teseo 2</fullName>
            </value>
            <value>
                <fullName>Atheros</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
            </value>
            <value>
                <fullName>C&amp;P</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>HED8020</fullName>
            </value>
            <value>
                <fullName>MTK3337</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>