force-app/main/default/objects/Product__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <label>Product Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cellular</fullName>
            </value>
            <value>
                <fullName>Positioning</fullName>
            </value>
            <value>
                <fullName>Short Range</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tashang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>